# Dual-Build-Demo

./: .gitmodules  CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  main.cpp
src/Renderer/: CMakeLists.txt  PcRenderer.cpp  PcRenderer.hpp  Renderer.cpp  Renderer.hpp  SdlRenderer.cpp  SdlRenderer.hpp  SpiRenderer.cpp  SpiRenderer.hpp  TftRenderer.cpp  TftRenderer.hpp
src/Utilities/: CMakeLists.txt
src/Widgets/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
tools/: arm.cmake  avr.cmake  gcc.cmake
